trunk/Source/include/ODEImport.hpp



typedef float TdReal;


typedef float *PdReal;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 4> TdVector4;


typedef System::StaticArray<float, 12> TdMatrix3;


typedef TdVector4 TdQuaternion;


typedef System::StaticArray<float, 6> TdAABB;


struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};



struct TdxGeom;

typedef TdxGeom *PdxGeom;


typedef int __fastcall (*TdTriCallback)(PdxGeom TriMesh, PdxGeom RefObject, int TriangleIndex);


typedef void __fastcall (*TdTriArrayCallback)(PdxGeom TriMesh, PdxGeom RefObject, System::PIntegerArray TriIndices, int TriCount);


typedef int __fastcall (*TdTriRayCallback)(PdxGeom TriMesh, PdxGeom Ray, int TriangleIndex, float u, float v);


typedef TdColliderFn __cdecl (*TdGetColliderFnFn)(int num);


typedef void __cdecl (*TdGetAABBFn)(PdxGeom g, float *aabb);


typedef void __cdecl (*TdGeomDtorFn)(PdxGeom o);


typedef int __cdecl (*TdAABBTestFn)(PdxGeom o1, PdxGeom o2, float const *aabb2);


struct DECLSPEC_DRECORD TdGeomClass
{
public:
	int bytes;
	TdGetColliderFnFn collider;
	TdGetAABBFn aabb;
	TdAABBTestFn aabb_test;
	TdGeomDtorFn dtor;
};


struct TdxSpace;

typedef TdxSpace *PdxSpace;


typedef System::StaticArray<float, 65536> TdRealHugeArray;


typedef TdRealHugeArray *PdRealHugeArray;


typedef System::StaticArray<int, 65536> TdIntegerArray;


typedef TdIntegerArray *PdIntegerArray;


typedef System::StaticArray<System::StaticArray<float, 4>, 65536> TdVector3Array;


typedef TdVector3Array *PdVector3Array;


struct DECLSPEC_DRECORD TdxTriMeshData
{
public:
	System::Byte unknown;
};



typedef TdxTriMeshData *PdxTriMeshData;



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};

struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};


//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode_single.dll"

extern "C" PdxGeom __cdecl dCreateGeom(int classnum);

extern "C" int __cdecl dCreateGeomClass(const TdGeomClass &classptr);

extern "C" void * __cdecl dGeomGetClassData(PdxGeom o);

extern "C" int __cdecl dGeomIsSpace(const PdxGeom Geom);

extern "C" void __cdecl dGeomEnable(const PdxGeom Geom);

extern "C" void __cdecl dGeomDisable(const PdxGeom Geom);

extern "C" int __cdecl dGeomIsEnabled(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetCategoryBits(const PdxGeom Geom, unsigned bits);

extern "C" unsigned __cdecl dGeomGetCategoryBits(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetCollideBits(const PdxGeom Geom, unsigned bits);

extern "C" unsigned __cdecl dGeomGetCollideBits(const PdxGeom Geom);

extern "C" PdxGeom __cdecl dCreateGeomTransform(const PdxSpace Space);

extern "C" PdxGeom __cdecl dCreateBox(const PdxSpace Space, const float lx, const float ly, const float lz);

extern "C" float __cdecl dGeomBoxPointDepth(const PdxGeom Geom, const float x, const float y, const float z);

extern "C" PdxGeom __cdecl dCreateCylinder(const PdxSpace Space, float r, float lz);

extern "C" void __cdecl dGeomCylinderSetParams(const PdxGeom Geom, float radius, float length);

extern "C" void __cdecl dGeomCylinderGetParams(const PdxGeom Geom, float &radius, float &length);

extern "C" PdxGeom __cdecl dCreatePlane(const PdxSpace Space, const float a, const float b, const float c, const float d);

extern "C" float __cdecl dGeomPlanePointDepth(const PdxGeom Geom, const float x, const float y, const float z);

extern "C" PdxGeom __cdecl dCreateSphere(const PdxSpace Space, const float radius);

extern "C" float __cdecl dGeomSpherePointDepth(const PdxGeom Geom, const float x, const float y, const float z);

extern "C" PdxGeom __cdecl dCreateRay(const PdxSpace Space, float length);

extern "C" void __cdecl dGeomRaySet(const PdxGeom Geom, float px, float py, float pz, float dx, float dy, float dz);

extern "C" void __cdecl dGeomRayGet(const PdxGeom Geom, float *start, float *dir);

extern "C" void __cdecl dGeomRaySetLength(const PdxGeom Geom, float length);

extern "C" float __cdecl dGeomRayGetLength(const PdxGeom Geom);

extern "C" void __cdecl dGeomRaySetClosestHit(const PdxGeom Geom, int closestHit);

extern "C" int __cdecl dGeomRayGetClosestHit(const PdxGeom Geom);

extern "C" PdxGeom __cdecl dCreateTriMesh(const PdxSpace Space, PdxTriMeshData Data, TdTriCallback Callback, TdTriArrayCallback ArrayCallback, TdTriRayCallback RayCallback);

extern "C" int __cdecl dGeomTriMeshIsTCEnabled(PdxGeom g, int geomClass);

extern "C" void __cdecl dGeomTriMeshEnableTC(PdxGeom g, int geomClass, int enable);

extern "C" void __cdecl dGeomTriMeshClearTCCache(PdxGeom g);

extern "C" void __cdecl dGeomTriMeshGetTriangle(PdxGeom g, int Index, PdVector3 v0, PdVector3 v1, PdVector3 v2);

extern "C" void __cdecl dGeomTriMeshGetPoint(PdxGeom g, int Index, float u, float v, float *result);

extern "C" void * __cdecl dGeomTriMeshGetArrayCallback(PdxGeom g);

extern "C" void * __cdecl dGeomTriMeshGetRayCallback(PdxGeom g);

extern "C" void __cdecl dGeomTriMeshSetArrayCallback(PdxGeom g, void * ArrayCallback);

extern "C" void __cdecl dGeomTriMeshSetRayCallback(PdxGeom g, void * RayCallback);

extern "C" void __cdecl dGeomTriMeshSetCallback(PdxGeom g, void * Callback);

extern "C" void * __cdecl dGeomTriMeshGetCallback(PdxGeom g);

extern "C" void __cdecl dGeomTriMeshDataDestroy(PdxTriMeshData g);

extern "C" PdxTriMeshData __cdecl dGeomTriMeshDataCreate(void);

extern "C" void __cdecl dGeomTriMeshDataBuildSimple(PdxTriMeshData g, PdVector3Array Vertices, int VertexCount, PdIntegerArray Indices, int IndexCount);

extern "C" void __cdecl dGeomTriMeshDataBuildDouble(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride);

extern "C" void __cdecl dGeomTriMeshDataBuildSingle(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride);

extern "C" void __cdecl dInfiniteAABB(PdxGeom geom, float *aabb);

extern "C" void __cdecl dSpaceDestroy(const PdxSpace Space);

extern "C" PdxSpace __cdecl dSimpleSpaceCreate(PdxSpace Space);

extern "C" PdxSpace __cdecl dHashSpaceCreate(PdxSpace Space);

extern "C" PdxSpace __cdecl dQuadTreeSpaceCreate(const PdxSpace Space, float const *Center, float const *Extents, const int Depth);

extern "C" void __cdecl dSpaceAdd(const PdxSpace Space, const PdxGeom Geom);

extern "C" void __cdecl dSpaceRemove(const PdxSpace Space, const PdxGeom Geom);

extern "C" void __cdecl dSpaceClean(const PdxSpace Space);

extern "C" int __cdecl dSpaceQuery(const PdxSpace Space, const PdxGeom Geom);

extern "C" int __cdecl dSpaceGetNumGeoms(const PdxSpace Space);

extern "C" PdxGeom __cdecl dSpaceGetGeom(const PdxSpace Space, const int i);

extern "C" void __cdecl dHashSpaceSetLevels(const PdxSpace Space, const int minlevel, const int maxlevel);

extern "C" void __cdecl dSpaceSetCleanup(PdxSpace space, const int mode);

extern "C" int __cdecl dSpaceGetCleanup(PdxSpace Space);

extern "C" void __cdecl dMassSetParameters(TdMass &m, float themass, float cgx, float cgy, float cgz, float I11, float I22, float I33, float I12, float I13, float I23);

extern "C" void __cdecl dMassAdd(TdMass &a, TdMass &b);

extern "C" void __cdecl dMassAdjust(TdMass &m, float newmass);

extern "C" void __cdecl dMassTranslate(TdMass &m, float x, float y, float z);

extern "C" void __cdecl dMassRotate(TdMass &m, float *R);

extern "C" void __cdecl dMassSetZero(TdMass &m);

extern "C" void __cdecl dMassSetBox(TdMass &m, float density, float lx, float ly, float lz);

extern "C" void __cdecl dMassSetBoxTotal(TdMass &m, float total_mass, float lx, float ly, float lz);

extern "C" void __cdecl dMassSetCylinder(TdMass &m, float density, int direction, float radius, float length);

extern "C" void __cdecl dMassSetCylinderTotal(TdMass &m, float total_mass, int direction, float radius, float length);

extern "C" void __cdecl dMassSetSphere(TdMass &m, float density, float radius);

extern "C" void __cdecl dMassSetSphereTotal(TdMass &m, float total_mass, float radius);

extern "C" void __cdecl dQFromAxisAndAngle(float *q, const float ax, const float ay, const float az, const float angle);

extern "C" void __cdecl dRFromAxisAndAngle(float *R, const float ax, const float ay, const float az, const float angle);

extern "C" void __cdecl dRSetIdentity(float *R);

extern "C" void __cdecl dQSetIdentity(float *Q);

extern "C" void __cdecl dRFromEulerAngles(float *R, const float phi, const float theta, const float psi);

extern "C" void __cdecl dRFrom2Axes(float *R, const float ax, const float ay, const float az, const float bx, const float by, const float bz);

extern "C" void __cdecl dRFromZAxis(float *R, const float ax, const float ay, const float az);

extern "C" void __cdecl dMultiply0(const PdReal A, const PdReal B, const PdReal C, int p, int q, int r);

extern "C" void __cdecl dMultiply1(const PdReal A, const PdReal B, const PdReal C, int p, int q, int r);

extern "C" void __cdecl dMultiply2(const PdReal A, const PdReal B, const PdReal C, int p, int q, int r);

extern "C" void __cdecl dQMultiply0(float *qa, float const *qb, float const *qc);

extern "C" void __cdecl dQMultiply1(float *qa, float const *qb, float const *qc);

extern "C" void __cdecl dQMultiply2(float *qa, float const *qb, float const *qc);

extern "C" void __cdecl dQMultiply3(float *qa, float const *qb, float const *qc);

extern "C" void __cdecl dNormalize3(float *a);

extern "C" void __cdecl dNormalize4(float *a);